fix: positioning and gap in navbar{services, vendor}

--- a/src/containers/restaurantDetails/restaurant-details.css
+++ b/src/containers/restaurantDetails/restaurant-details.css
@@ -1,28 +1,36 @@
 .indi_restCont {
   display: flex;
   gap: 1rem;
+  flex-direction: column;
+  width: 93%;
+  margin: 0 auto;
+}
+
+.ACRL_container {
+  display: flex;
+  gap: 1rem;
 }
 
 .ACR_Cont {
-    width: min-content;
+  width: min-content;
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
   .ACR_Cont {
     width: 60%;
-}
+  }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .ACR_Cont {
     width: 70%;
     margin: 0 auto;
-}
+  }
 }
 
-@media screen and (max-width: 668px){
+@media screen and (max-width: 668px) {
   .ACR_Cont {
     width: 100%;
     margin: 0;
-}
+  }
 }
